I make 2 new links to my technology page and I hit the green arrow from netbeans  to see what happens.

--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -25,7 +25,7 @@ body{
 }
    
 #projects {
-    background-image: url(http://artatm.com/wp-content/uploads/2013/02/cool_graphic_tshirt_designs_3.jpg);
+    background-image: url(http://data3.whicdn.com/images/57667068/large.gif);
 }
 
 
